Fix nobreak on print

--- a/styles/resume.css
+++ b/styles/resume.css
@@ -101,7 +101,7 @@ body {
 }
 
 @media print {
-  .content {
+  .nobreak {
     break-inside: avoid;
   }
 }
